manifests/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: service1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: myservice.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envoy-ingress
            port:
              number: 80
